Add bootloader and firmware update related APIs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SDK_SRC_DIR "src")
 set(SDK_SRC
   "${SDK_SRC_DIR}/device_base.cpp"
   "${SDK_SRC_DIR}/device.cpp"
+  "${SDK_SRC_DIR}/bootloader.cpp"
   "${SDK_SRC_DIR}/device_info.cpp"
   "${SDK_SRC_DIR}/location.cpp"
   "${SDK_SRC_DIR}/session.cpp"
